--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HEADER -->
     <h1>Welcome to Riyadh</h1>
     <!-- SUB HEAD -->
-    <h2></h2>
+    <h2>Where A Traditional Past Meets A Modern Future</h2>
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
     </div>
