--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <h3>Sources</h3>
         
-        <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh"
+        <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target
     </div>
   </div>
 </body>
