--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         
         <h3>Sources</h3>
         
-        <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Lonely Planet</a>
+        <a href="http://www.lonelyplanet.com/saudi-arabia/riyadh" target="_blank">Lonely Planet</a><br>
     </div>
   </div>
 </body>
